SiteAssets/pages/2.0/scripts/user.dashboard.layout.1.css
/* ... */
.clr_5_active {
    background-color: rgba(255, 23, 20, 0.5);
    border: 1px solid rgb(255, 23, 20);
    color: rgb(255, 255, 255);
}

.sevs,
.liks {
    font-size: 1em;
}

.hidden-cell {
    display: none;
}

#DeltaTopNavigation {
    width: 100%;
    float: left;
}


/* h1, h2, h3, h4, h5, h6, .ms-h1, .ms-h2, .ms-h3, .ms-h4, .ms-h5, .ms-h6 {
    font-weight: normal;
    margin:0 !important;
} */

.tgn-btn {
    display: block;
    cursor: pointer;
    margin: 0 16px 0 0;
    float: left;
    width: 150px;
    text-align: center;
}

.tgn-btn:hover {
    background-color: #21E500;
    color: #000000;
}

.tgn-btn-xtra {
    display: block;
    cursor: pointer;
    margin: 0 16px 0 0;
    float: left;
    width: 150px;
    text-align: center;
}

.tgn-btn-xtra:hover {
    background-color: #21E500;
    color: #000000;
}

.tpos-svbtn {
    display: block;
    padding: 5px;
    background-color: rgb(0, 0, 0);
    text-align: center;
    color: rgb(255 255 255);
    box-shadow: 1px 1px 1px rgb(255 255 255);
    background: #7939f7;
    -webkit-box-shadow: 4px 5px 0 0 #fff;
    -moz-box-shadow: 4px 5px 0 0 #fff;
    box-shadow: 4px 5px 0 0 #fff;
    -webkit-transition: all .2s ease-in-out;
    -moz-transition: all .2s ease-in-out;
    -o-transition: all .2s ease-in-out;
    transition: all .2s ease-in-out;
    border: solid 1.5px #fff;
    width: 65px;
    float: right;
    margin: 5px;
}

.tpos-svbtn:hover {
    -webkit-box-shadow: 6px 7px 0 0 #fff;
    -moz-box-shadow: 6px 7px 0 0 #fff;
    box-shadow: 6px 7px 0 0 #fff;
    color: rgb(255 255 255);
    cursor: pointer;
}

.width-a {
    width: auto;
    min-width: 80px;
}

.tpos-svcbtn {
    display: block;
    padding: 5px;
    border-radius: 3px;
    background-color: rgb(0, 0, 0);
    color: rgb(255, 255, 255);
    text-align: center;
    border: 1px solid #21E500;
    width: 85px;
    float: left;
    cursor: pointer;
}

.tpos-svcbtn:hover {
    background: -moz-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.72) 63%, rgba(255, 255, 255, 0) 100%);
    /* FF3.6-15 */
    background: -webkit-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.72) 63%, rgba(255, 255, 255, 0) 100%);
    /* Chrome10-25,Safari5.1-6 */
    background: radial-gradient(ellipse at center, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.72) 63%, rgba(255, 255, 255, 0) 100%);
    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff', GradientType=1);
    /* IE6-9 fallback on horizontal gradient */
    color: rgb(0, 0, 0);
}

.coordinatesTBL {
    border-collapse: collapse;
}

.ctagd:hover {
    background-color: #FF1F19;
    color: #fff;
}

.tpos-delbtn {
    display: block;
    padding: 5px;
    border-radius: 3px;
    background-color: rgb(255, 0, 0);
    color: rgb(255, 255, 255);
    text-align: center;
    border: 1px solid #21E500;
    width: 35px;
    float: left;
    cursor: pointer;
}

.tpos-addbtn {
    display: block;
    padding: 5px;
    border-radius: 3px;
    background-color: rgb(0, 255, 0);
    color: rgb(0, 0, 0);
    text-align: center;
    border: 1px solid #21E500;
    width: 35px;
    float: left;
    cursor: pointer;
}

.tpos-rvbtn {
    display: block;
    padding: 5px;
    border-radius: 3px;
    background-color: rgb(0, 0, 0);
    color: rgb(255, 255, 255);
    text-align: center;
    border: 1px solid #21E500;
    /* width:85px; */
    float: left;
    cursor: pointer;
}

.archive-button {
    display: block;
    padding: 5px;
    border-radius: 3px;
    background-color: rgb(0, 0, 0);
    color: rgb(255, 255, 255);
    text-align: center;
    border: 1px solid #21E500;
    width:85px;
    /* float: center; */
    cursor: pointer;
}

.scoring-table {
    border-collapse: collapse;
    margin: 25px 0;
    min-width: 400px;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
}

.scoring-table tr {
    background-color: #0f630073;
    color: #ffffff;
    text-align: left;
}


.scoring-table th, 
.scoring-table td {
    padding: 5px 5px;
}

.scoring-table tbody tr {
    border: 1px solid #21E500;
}

.home-button {
    display: block;
    padding: 5px;
    border-radius: 3px;
    color: rgb(0, 0, 0);
    text-align: center;
    border: 1px solid #000000;
    float: left;
    cursor: pointer;
}

.home-button:hover{
    background-color: #d8d8d8;
}

.information-icon {
    font-size: small;
    cursor: pointer;
}

